<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unitTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hintLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unitInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/convertedNumber"
        style="@style/Widget.UnitConverter.TextView"
        android:layout_width="0dp"
        android:text="fei"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/unitTextInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="amount" />

    <TextView
        android:id="@+id/from"
        style="@style/Widget.UniConverter.TextViewLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fromLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitTextInputLayout" />

    <RadioGroup
        android:id="@+id/fromUnitRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/unit3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from">

        <RadioButton
            android:id="@+id/unit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter" />

        <RadioButton
            android:id="@+id/unit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters" />

        <RadioButton
            android:id="@+id/unit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometer" />
    </RadioGroup>

    <TextView
        android:id="@+id/to"
        style="@style/Widget.UniConverter.TextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/toLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitTextInputLayout" />

    <RadioGroup
        android:id="@+id/toRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/toUnit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to">

        <RadioButton
            android:id="@+id/toUnit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter" />

        <RadioButton
            android:id="@+id/toUnit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters" />

        <RadioButton
            android:id="@+id/toUnit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometer" />
    </RadioGroup>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>